--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "eslint": "9.14.0",
     "eslint-config-next": "15.0.3",
     "framer-motion": "^11.11.11",
-    "next": "15.0.3",
+    "next": "^15.0.3",
     "postcss": "8.4.47",
-    "react": "18.3.1",
+    "react": "^18.3.1",
     "react-animated-numbers": "^0.18.0",
-    "react-dom": "18.3.1",
+    "react-dom": "^18.3.1",
     "react-type-animation": "^3.2.0",
     "resend": "^4.0.0",
     "sharp": "^0.33.5",
